@@ -132,8 +132,8 @@ setMethod("show",
 #' and predefined as empty list by default.
 #'
 #' @param class [\code{set_RLum}] \code{\link{character}} (\bold{required}): name of the \code{RLum} class to create
-#' @param recordType [\code{set_RLum}] \code{\link{character}} (optional): record type (e.g. "OSL")
-#' @param curveType [\code{set_RLum}] \code{\link{character}} (optional): curve type (e.g. "predefined" or "measured")
+#' @param recordType [\code{set_RLum}] \code{\link{character}} (optional): record type (e.g., "OSL")
+#' @param curveType [\code{set_RLum}] \code{\link{character}} (optional): curve type (e.g., "predefined" or "measured")
 #' @param data [\code{set_RLum}] \code{\link{matrix}} (\bold{required}): raw curve data
 #' @param info [\code{set_RLum}] \code{\link{list}} (optional): info elements
 setMethod("set_RLum",
@@ -142,13 +142,13 @@ setMethod("set_RLum",
           definition = function(class, recordType, curveType, data, info){
 
               ##check for missing curveType
-              if(missing(curveType)==TRUE){
+              if(missing(curveType)){
 
                 curveType <- "NA"
 
-              }else if (is(curveType, "character") == FALSE){
+              }else if (!is(curveType, "character")){
 
-                stop("[set_RLum] Error: 'curveType' has to be of type 'character'!")
+                stop("[set_RLum] 'curveType' has to be of type 'character'!")
 
               }
 
@@ -172,7 +172,7 @@ setMethod("set_RLum",
 
                 info <- list()
 
-              }else if (is(info, "list") == FALSE){
+              }else if (!is(info, "list")){
 
                 stop("[set_RLum] 'info' has to be of type 'list'!")
 
